objects/xDO_MDC_Unified_Addresses__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_MDC_Address_Data_Source__c</fullName>
        <label>Data Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Unified_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unified Address</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>xDO_MDC_City__c</columns>
        <columns>xDO_MDC_Address__c</columns>
        <columns>xDO_MDC_Country__c</columns>
        <columns>xDO_MDC_State__c</columns>
        <columns>xDO_MDC_Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unified Addresses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>